--- a/ep2/nu1.html
+++ b/ep2/nu1.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Love+Ya+Like+A+Sister&display=swap" rel="stylesheet">
-    <title>Samis Gift</title>
+    <title>Ana Gift</title>
 </head>
 <body>
     
@@ -16,7 +16,7 @@
     <div id="superdiv">
         
         <div id="super">
-            <h1>voce só pode ser mesmo a Samis! só ela pensaria em contar todos os "eu te amo"</h1>
+            <h1>voce só pode ser mesmo a Ana! só ela pensaria em contar todos os "eu te amo"</h1>
         </div>
         <h4 id="erroep2" class="fica fica-esconde">erro</h4>
         <div id="fuckline">
@@ -33,7 +33,7 @@
         <div id="fuckline">
             <div id="chamber"onmouseover="Passou()" onmouseout="Tomou()">
             <div onclick="loadDoc(); playAudio()">
-             <h2 class="opcao"><img src="../imagens/5a1d3ed25e6028.9092514815118660663866.png" alt="dedo apontando pra direita" style="max-width:110px;opacity: calc(90%);">na verdade não sou a Samis</h2> </a>
+             <h2 class="opcao"><img src="../imagens/5a1d3ed25e6028.9092514815118660663866.png" alt="dedo apontando pra direita" style="max-width:110px;opacity: calc(90%);">na verdade não sou a Ana</h2> </a>
             </div>
             </div>
         </div>
