--- a/ep2/nu6.html
+++ b/ep2/nu6.html
@@ -11,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Mali:wght@300&family=Press+Start+2P&display=swap" rel="stylesheet">
-    <title>Samis Gift</title>
+    <title>Ana Gift</title>
 </head>
 <body>
     
@@ -19,7 +19,7 @@
     <div id="superdiv">
         
         <div id="super">
-            <h1 id="puto">nao quero saber seu filho de uma puta eu vou te matar seu arrombado sai daqui agora, eu nao suporto mais a sua existencia, eu so queria expressar meu amor pra garota que eu amo, mas mesmo assim voce persiste me incomodando. a unica coisa por qual me interesso se chama samis, pra onde ela foi?
+            <h1 id="puto">nao quero saber seu filho de uma puta eu vou te matar seu arrombado sai daqui agora, eu nao suporto mais a sua existencia, eu so queria expressar meu amor pra garota que eu amo, mas mesmo assim voce persiste me incomodando. a unica pessoa por qual me interesso se chama Ana Rubia, pra onde ela foi?
                 <br>alias, sobre o que voce queria falar comigo?...
             </h1> 
         </div>
