--- a/pages/fim.html
+++ b/pages/fim.html
@@ -14,7 +14,7 @@
     <div id="super">
         <h1> por favor, se retire.</h1>
     </div>
-    <a href="https://pornhub.com" target="blank"><button style="display: block;
+    <a href="https://www.youtube.com/watch?v=YpLPmYh-72Y" target="blank"><button style="display: block;
    margin-left: auto;
    margin-right: auto;
    width: 20%;">sair</button> </a>
