--- a/pages/novo1.html
+++ b/pages/novo1.html
@@ -8,16 +8,16 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Love+Ya+Like+A+Sister&display=swap" rel="stylesheet">
-    <title>Samis Gift</title>
+    <title>Ana Gift</title>
 </head>
 <body>
     <div id="super">
-        <h1> MAS VOCÊ É MESMO A SAMIS? </h1>
+        <h1> MAS VOCÊ É MESMO A MINHA ANA RUBIA?? </h1>
     </div>
     <div id="fuckline">
         <div id="indiv" onmouseover="Passou1()" onmouseout="Tomou1()">
         <div>
-            <a href="novo2.html"> <h2><img src="../imagens/5a1d3ed25e6028.9092514815118660663866.png" alt="dedo apontando pra direita" style="max-width:110px;opacity: calc(90%);">SIM MEO</h2></a>
+            <a href="novo2.html"> <h2><img src="../imagens/5a1d3ed25e6028.9092514815118660663866.png" alt="dedo apontando pra direita" style="max-width:110px;opacity: calc(90%);">SIM PARÇA</h2></a>
         </div>
         </div>
     </div>  
