--- a/isntindex.html
+++ b/isntindex.html
@@ -8,11 +8,11 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Love+Ya+Like+A+Sister&display=swap" rel="stylesheet">
-    <title>Samis Gift</title>
+    <title>Ana Gift</title>
 </head>
 <body>
     <div id="super">
-        <h1> oi, Samira</h1>
+        <h1> oi, Ana Rubia☆ </h1>
     </div>
     <div id="fuckline">
     <div id="chamber"onmouseover="Passou()" onmouseout="Tomou()">
